--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 jobs:
   build:
     machine:
-      image: ubuntu-2004:2023.04.2
+      image: ubuntu-2204:current
     steps:
       - checkout
       # Whatever you want to do
